BUGFIX: Text wrap in auth menu (when not logged in)

--- a/app/Web/app/less/header.less
+++ b/app/Web/app/less/header.less
@@ -42,6 +42,7 @@ header {
         -webkit-align-self: flex-end;
         -ms-flex-item-align: end;
         align-self: flex-end;
+        white-space: nowrap;
 
         .dropdown {
             li {
